--- a/style.css
+++ b/style.css
@@ -537,7 +537,7 @@ footer span {
     
     .nav_list a {
         font-size: 30px;
-        transition: all 0.7s ease-in-out;
+        transition: all 150ms ease-in-out;
     }
 
     .nav_list a:hover {
@@ -638,7 +638,7 @@ footer span {
         -webkit-backdrop-filter: blur( 4px );
         border-radius: 10px;
         border: 1px solid rgba( 255, 255, 255, 0.18 );
-        transition: all 2s ease-in-out;
+        transition: all 500ms ease-in-out;
         opacity: 0;
     }
 
